[gd_scene load_steps=3 format=3 uid="uid://iox78ee3or7r"]

[ext_resource type="Script" uid="uid://dsmkdnfffivld" path="res://main_menu/level_select/level_select.gd" id="1_7cium"]
[ext_resource type="Theme" uid="uid://dytoj03c16d40" path="res://assets/themes/global.tres" id="2_7cium"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7cium")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="dummy" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_7cium")
text = "Dummy Level"

[node name="mining" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_7cium")
text = "Mining Area"

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_7cium")
text = "Theme Sandbox"

[node name="back" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_7cium")
text = "Back"

[node name="home_base" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_vwc8s")
text = "Home Base"

[connection signal="pressed" from="VBoxContainer/dummy" to="." method="_on_dummy_pressed"]
[connection signal="pressed" from="VBoxContainer/mining" to="." method="_on_mining_pressed"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="VBoxContainer/home_base" to="." method="_on_home_base_pressed"]
